# app/Modules/Ideas/Controllers/IdeasController.php
@@ -3,8 +3,10 @@
 namespace App\Modules\Ideas\Controllers;
 
 use App\Http\Controllers\Controller;
+use App\Http\Resources\IdeaResource;
 use App\Modules\Ideas\Requests\CreateIdeaRequest;
 use App\Modules\Ideas\Requests\IndexIdeasRequest;
+use App\Modules\Ideas\Requests\UpdateIdeaInteractionRequest;
 use App\Modules\Ideas\Services\IdeasService;
 use App\Utils\ResponseHelper;
 use Illuminate\Http\JsonResponse;
@@ -18,7 +20,9 @@ class IdeasController extends Controller
 
     public function index(IndexIdeasRequest $request): JsonResponse
     {
-        $response = $this->ideasService->listIdeas($request->validated());
+        $response = $this->ideasService->listIdeas($request->validated(), (int) $request->user()->id);
+
+        $response['data']['ideas'] = IdeaResource::collection(collect($response['data']['ideas']))->resolve();
 
         return response()->json(ResponseHelper::success($response['data'], $response['meta']));
     }
@@ -27,6 +31,8 @@ class IdeasController extends Controller
     {
         $response = $this->ideasService->listIdeasForUser((int) $request->user()->id);
 
+        $response['ideas'] = IdeaResource::collection(collect($response['ideas']))->resolve();
+
         return response()->json(ResponseHelper::success($response));
     }
 
@@ -34,6 +40,19 @@ class IdeasController extends Controller
     {
         $response = $this->ideasService->createIdea((int) $request->user()->id, $request->validated());
 
+        $response['idea'] = IdeaResource::make($response['idea'])->resolve();
+
         return response()->json(ResponseHelper::success($response), 201);
+    }
+
+    public function updateInteraction(int $ideaId, UpdateIdeaInteractionRequest $request): JsonResponse
+    {
+        $response = $this->ideasService->updateInteraction(
+            $ideaId,
+            (int) $request->user()->id,
+            (string) $request->validated('state')
+        );
+
+        return response()->json(ResponseHelper::success($response));
     }
 }
