# app/Modules/Ideas/Requests/UpdateIdeaInteractionRequest.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Modules\Ideas\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateIdeaInteractionRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * @return array<string, mixed>
+     */
+    public function rules(): array
+    {
+        return [
+            'state' => ['required', 'string', 'in:upvote,downvote,neutral'],
+        ];
+    }
+}
